--- a/desktop/src/app/components/configuration/browse/configuration-category.scss
+++ b/desktop/src/app/components/configuration/browse/configuration-category.scss
@@ -42,6 +42,10 @@ configuration-category {
 
       .category-name {
         padding-top: 6px;
+        max-width: 350px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .mdi-script-text-outline {
